--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -2,22 +2,13 @@ name: GitHub Status
 
 on:
   schedule:
-    - cron: '0 1,13 * * 2' # Runs at 1 AM and 1 PM UTC on Tuesday (2)
-    - cron: '0 1,13 * * 3' # Runs at 1 AM and 1 PM UTC on Wednesday (3)
-    - cron: '0 1,13 * * 5' # Runs at 1 AM and 1 PM UTC on Friday (5)
-    - cron: '0 1,13 * * 6' # Runs at 1 AM and 1 PM UTC on Saturday (6)
-    - cron: '0 1,13 * * 1' # Runs at 1 AM and 1 PM UTC on Monday (1)
-    - cron: '0 1,13 * * 3' # Runs at 1 AM and 1 PM UTC on Wednesday (3)
-    - cron: '0 1,13 * * 5' # Runs at 1 AM and 1 PM UTC on Friday (5)
-    - cron: '0 1,13 * * 6' # Runs at 1 AM and 1 PM UTC on Sunday (7)
+    - cron: '0 1 * * *' # Runs at 1 AM UTC every day
   workflow_dispatch:
   
 jobs:
   check-api-status:
     runs-on: ubuntu-latest
     steps:
-      # Steps for checking API status and committing changes...    steps:
-      # Steps for checking API status and committing changes...
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -29,7 +20,7 @@ jobs:
 
       - name: Install jq
         run: sudo apt-get install jq
-          
+
       - name: Check API Status
         run: |
           cd ./resources/API
@@ -41,8 +32,13 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.email "${{ secrets.EMAIL }}"
-          git config --global user.name "<jge162>"
-          git add .
-          git commit -m "Automated commit: Update API status in commitlog"
-          git push
+          commit_count=$(git log --oneline --author="<jge162>" --since="1 week ago" | wc -l)
+          if [[ $commit_count -lt 4 ]]; then
+            git config --global user.email "${{ secrets.EMAIL }}"
+            git config --global user.name "<jge162>"
+            git add .
+            git commit -m "Automated commit: Update API status in commitlog"
+            git push
+          else
+            echo "Already committed 4 times this week. Skipping commit."
+          fi
