--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -1,8 +1,7 @@
 name: GitHub Status
-
 on:
   schedule:
-    - cron: '0 1 * * *' # Runs at 1 AM UTC every day
+    - cron: '0 1,13 * * *' # Runs at 1 AM and 1 PM UTC every day
   workflow_dispatch:
   
 jobs:
@@ -20,7 +19,7 @@ jobs:
 
       - name: Install jq
         run: sudo apt-get install jq
-
+          
       - name: Check API Status
         run: |
           cd ./resources/API
@@ -30,20 +29,10 @@ jobs:
         env:
           TOKEN: ${{ secrets.WORKFLOW_SECRET }}
 
-      - name: Count Commits
-        run: |
-          commit_count=$(git rev-list --count HEAD --author="<jge162>" --since="1 week ago")
-          echo "Commit count: $commit_count"
-
       - name: Commit changes
         run: |
-          commit_count=$(git log --oneline --author="<jge162>" --since="1 week ago" | wc -l)
-          if [[ $commit_count -lt 4 ]]; then
-            git config --global user.email "${{ secrets.EMAIL }}"
-            git config --global user.name "<jge162>"
-            git add .
-            git commit -m "Automated commit: Update API status in commitlog"
-            git push
-          else
-            echo "Already committed 4 times this week. Skipping commit."
-          fi
+          git config --global user.email "${{ secrets.EMAIL }}"
+          git config --global user.name "<jge162>"
+          git add .
+          git commit -m "Automated commit: Update API status in commitlog"
+          git push
