--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,9 +1,8 @@
 name: Update Package.json
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 9 * * *'
   workflow_dispatch:
 
 jobs:
