--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -37,16 +37,19 @@ jobs:
         run: echo "No package updates found. Skipping remaining steps."
 
       - name: Configure Git
+        if: steps.package_updates.outputs.updates == 'true'
         run: |
           git config --local user.email "escobarjeremy@csu.fullerton.edu"
           git config --local user.name "jge162"
 
       - name: Commit changes
+        if: steps.package_updates.outputs.updates == 'true'
         run: |
           git add package.json
           git commit -m "Update package.json" --no-verify
 
       - name: Push changes
+        if: steps.package_updates.outputs.updates == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.WORKFLOW_SECRET }}
