--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Python Action
-      uses: jge162/Action-workflows@v2.1.0
+      uses: jge162/Action-workflows@2.1.0
 
     - run: |
         echo "Install required dependencies" 
