--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Python Action
       uses: jge162/Action-workflows@2.1.0
+      with:
+        token: ${{ secrets.GITHUB_SECRET }}
 
     - run: |
         echo "Install required dependencies" 
@@ -32,5 +34,3 @@ jobs:
             with open(script, 'r') as file:
                 exec(file.read())"
 
-      env:
-        GITHUB_SECRET: ${{ secrets.GITHUB_SECRET }}
