--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -15,8 +15,6 @@ jobs:
     steps:
     - name: Python Action
       uses: jge162/Action-workflows@2.1.0
-      with:
-        token: ${{ secrets.GITHUB_SECRET }}
 
     - run: |
         echo "Install required dependencies" 
@@ -33,4 +31,5 @@ jobs:
         for script in scripts:
             with open(script, 'r') as file:
                 exec(file.read())"
-
+    env:
+        GITHUB_SECRET: ${{ secrets.WORKFLOW_SECRET }}
