--- a/.github/workflows/javascript_check.yml
+++ b/.github/workflows/javascript_check.yml
@@ -1,8 +1,8 @@
 name: Javascript Action error checker
 
 on:
-  schedule:
-  - cron: '0 0 1 * *'
+  #schedule:
+  #- cron: '0 0 1 * *'
   # action will run once a month on 1st day at 12:00 am 
   
   #- cron: '0 0 * * 6' 
